<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pl.edu.pw.mmajews2.photophoto.metadata.marker.switch"
        android:summary="@string/pref_description_metadata_marker"
        android:title="@string/pref_metadata_marker" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_metadata_marker_text"
        android:inputType="textCapWords"
        android:key="pl.edu.pw.mmajews2.photophoto.metadata.marker.text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_metadata_marker_text"
        android:dependency="pl.edu.pw.mmajews2.photophoto.metadata.marker.switch"/>


    <SwitchPreference
        android:defaultValue="false"
        android:key="pl.edu.pw.mmajews2.photophoto.metadata.marker.date"
        android:summary="@string/pref_description_metadata_marker_date"
        android:title="@string/pref_metadata_marker_date"
        android:dependency="pl.edu.pw.mmajews2.photophoto.metadata.marker.switch"/>


    <SwitchPreference
        android:defaultValue="false"
        android:enabled="false"
        android:key="pl.edu.pw.mmajews2.photophoto.metadata.marker.gps"
        android:summary="@string/pref_description_metadata_marker_gps"
        android:title="@string/pref_metadata_marker_gps"
        android:dependency="pl.edu.pw.mmajews2.photophoto.metadata.marker.switch"/>

</PreferenceScreen>
