<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pl.edu.pw.mmajews2.photophoto.encryption.enabled_switch"
        android:summary="@string/pref_description_encryption_enabled"
        android:title="@string/pref_encryption_enabled" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_encryption_password"
        android:inputType="textPassword"
        android:key="pl.edu.pw.mmajews2.photophoto.encryption.password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_encryption_password"
        android:dependency="pl.edu.pw.mmajews2.photophoto.encryption.enabled_switch"/>

</PreferenceScreen>