<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="pl.edu.pw.mmajews2.photophoto.SettingsActivity$PicturePreferenceFragment"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/pref_header_picture" />

    <header
        android:fragment="pl.edu.pw.mmajews2.photophoto.SettingsActivity$MetadataPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_metadata" />

    <header
        android:fragment="pl.edu.pw.mmajews2.photophoto.SettingsActivity$EncryptionPreferenceFragment"
        android:icon="@drawable/ic_lock_black_24dp"
        android:title="@string/pref_header_encryption" />

</preference-headers>
